@@ -935,6 +935,13 @@ viewport_belongs_help		Assign this viewport to a player
 #********************************************
 #********************************************
 
+rotation_type_help                      Determines when map and config rotation should occur. Possible values: (0) Do not do any rotation, (1) Rotate every round (2) Rotate every match
+map_rotation_help                       A list of map files to rotate through, with values separated by semicolons
+config_rotation_help                    A list of config files to rotate through, with values separated by semicolons
+reset_rotation_help                     Resets map and config rotation
+reset_rotation_on_start_new_match_help  If enabled, map and config rotation will be reset when a START_NEW_MATCH command is issued
+reset_rotaion_message                   Map and config rotation have been reset.
+
 word_delimiters_help    Characters that count as word delimiters when skipping over words in a text input field.
 
 mouse_grab_help			Grab the mouse pointer, so it can't leave the window
